Lesson 5&6: Activity - Done!

--- a/activityFive.css
+++ b/activityFive.css
@@ -1,3 +1,314 @@
 body {
-    background-color: rgb(176, 91, 255);
+    background-color: whitesmoke;
+}
+h1 {
+    color: darkslateblue;
+}
+h3 {
+    color: darkslateblue;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: rgb(112, 187, 36);
+}
+
+.vid {
+    font-size: 18px;
+    font-weight: bold;
+    width: 300px;
+    color: black;
+    
+    margin-bottom: 5px;
+
+    /* spacing between line */
+    line-height: 25px;
+
+    /* to center text */
+    /* text-align: center; */
+}
+
+.stats {
+    font-size: 14px;
+    color: rgb(96, 96, 96);
+
+    margin-top: 0px;
+    margin-bottom: 15px;
+}
+
+.name {
+    font-size: 14px;
+    color: rgb(96, 96, 96);
+
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+
+.desc {
+    font-size: 14px;
+    width: 270px;
+    color: rgb(96, 96, 96);
+
+    line-height: 19px;
+
+    margin-top: 20px;
+    margin-bottom: 100px;
+}
+
+.apple {
+    background-color: rgb(227, 65, 64);
+    color: white;
+    font-size: 14px;
+    text-align: center;
+
+    padding-left: 18px;
+    padding-right: 18px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 50px;
+
+}
+.shop {
+    margin-left: 10px;
+}
+.shop:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+/* 5a. Tahoma */
+.tahoma {
+    font-family: tahoma;
+    font-weight: bold;
+    font-size: 30px;
+
+    color: black;
+
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+/* 5b. Arial: Deals */
+.bOne {
+    font-weight: 800;
+    font-size: 32px;
+
+    color: black;
+
+    margin-top: 10px;
+    margin-bottom: 7px;
+}
+.bTwo {
+    font-size: 25px;
+    font-style: italic;
+
+    color: rgb(227, 65, 64);
+
+    margin-bottom: 40px;
+}
+
+/* 5c Verdan Font */
+.cOne {
+    font-family: Verdana;
+    font-size: 25px;
+    font-weight: bold;
+
+    color: black;
+
+    margin-top: 10px;
+    margin-bottom: 7px;
+}
+.cTwo {
+    font-family: Verdana;
+    font-size: 20px;
+
+    color: rgb(96, 96, 96);
+
+    margin-bottom: 23px;
+}
+.cThree {
+    font-family: Verdana;
+    font-size: 18px;
+
+    color: black;
+    width: 330px;
+
+    margin-bottom: 20px;
+}
+.cFour {
+    font-family: Verdana;
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+
+    background-color: rgb(41, 118, 41);
+    color: white;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-bottom: 40px;
+
+    cursor: pointer;
+}
+.cFour:hover {
+    background-color: rgb(45, 163, 49);
+}
+.cFour:active {
+    opacity: 80%;
+}
+
+/* 5d. Arial: Shopping */
+.dOne {
+    font-size: 30px;
+    font-weight: bold;
+
+    color: black;
+    text-align: center;
+
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.dTwo {
+    font-size: 20px;
+    font-weight: 500;
+
+    color: black;
+    text-align: center;
+
+    margin-bottom: 20px;
+}
+.dThree {
+    font-size: 16px;
+    font-weight: 500;
+
+    color: rgb(66, 154, 218);
+    text-align: center;
+
+    margin-bottom: 40px;
+}
+
+/* 5e. Apple Page */
+.eOne {
+    font-size: 20px;
+    font-weight: bold;
+
+    color: orange;
+    text-align: center;
+
+    margin-top: 10px;
+    margin-bottom: 13px;
+}
+.eTwo {
+    font-size: 30px;
+    font-weight: bold;
+
+    color: black;
+    text-align: center;
+
+    margin-bottom: 5px;
+}
+.eThree {
+    font-size: 55px;
+    font-weight: bolder;
+
+    color: black;
+    text-align: center;
+
+    margin-bottom: 15px;
+}
+.eFour {
+    font-size: 25px;
+
+    color: black;
+    text-align: center;
+
+    margin-bottom: 15px;
+}
+.eFive {
+    text-align: center;
+    background-color: rgb(0, 113, 227);
+    color: white;
+    border-radius: 30px;
+    cursor: pointer;
+
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 44%;
+    margin-right: 44%;
+    margin-bottom: 40px;
+}
+.eFive:hover {
+    background-color: rgb(1, 93, 186);
+}
+
+/* 5f. Stock Market */
+.fOne {
+    font-size: 40px;
+    color: black;
+
+    margin-top: 15px;
+}
+.usd {
+    font-size: 20px;
+    color: gray;
+}
+.fTwo {
+    font-size: 20px;
+    color: rgb(48, 130, 48);
+}
+.fThree {
+    font-size: 20px;
+    color: gray;
+
+    margin-bottom: 40px;
+}
+.red {
+    color: rgb(255, 42, 0);
+}
+
+/* 5g. Tweet */
+.gOne {
+    font-size: 20px;
+    font-weight: bolder;
+
+    color: black;
+    margin-top: 15px;
+}
+.unn {
+    color: gray;
+    font-weight: lighter;
+}
+.un {
+    color: gray;
+    font-weight: lighter;
+}
+.un:hover {
+    color: rgb(95, 95, 95);
+    text-decoration: underline;
+}
+.gTwo {
+    font-size: 20px;
+    width: 650px;
+
+    color: black;
+    margin-bottom: 15px;
+}
+.gThree {
+    font-size: 20px;
+    color: black;
+
+    margin-bottom: 40px;
+}
+.blue {
+    color: rgb(90, 181, 255);
+    cursor: pointer;
+}
+.blue:hover {
+    color: rgb(27, 152, 255);
 }
