--- a/MainPage.css
+++ b/MainPage.css
@@ -1,3 +1,35 @@
 body {
-    background-color: rgb(120, 255, 210);
+    background-color: rgb(254, 254, 254);
+}
+
+.lesson {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    background-color: chartreuse;
+    color: rgb(15, 15, 96);
+
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 2px;
+
+    cursor: pointer;
+    transition: padding 0.15s, margin 0.15s;
+}
+
+.lesson:hover {
+    background-color: rgb(144, 231, 56);
+    color: rgb(15, 15, 96);
+
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
