--- a/Lesson 6/activitySix.css
+++ b/Lesson 6/activitySix.css
@@ -1,12 +1,146 @@
-p {
-    color: black;
-    margin-bottom: 15px;
-    font-family: Montserrat;
-    font-size: 15px;
-    text-align: center;
+h1 {
+    font-size: 60px;
+    color: rgb(0, 96, 186);
+    margin-bottom: 0px
+}
+h3 {
+    font-size: 30px;
+    color: rgb(0, 38, 73);
+    font-weight: lighter;
+    margin-top: 0px;
 }
 
-.mod {
+p {
+    font-size: 18px;
+    color: rgb(0, 38, 73);
+    margin-top: 20px;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+
+.round {
+    width: 300px;
+    border-radius: 15px;
+}
+
+.square {
+    width: 200px;
+    height: 200px;
+
+    object-fit: cover;
+    object-position: center;
+}
+
+.circle {
+    width: 200px;
+    height: 200px;
+
+    object-fit: cover;
+    object-position: center;
+
+    border-radius: 100px;
+}
+
+.searchBar {
+    font-family: "Space Mono", monospace;
+    font-size: 20px;
+    width: 250px;
+    height: 40px;
+
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    padding-left: 18px;
+
+    color: grey;
+}
+
+.google {
+    font-family: "Space Mono", monospace;
+    font-size: 20px;
+    width: 500px;
+    height: 40px;
+
+    border-radius: 25px;
+    border: none;
+    padding-left: 18px;
+
+    color: grey;
+    box-shadow: 0px 2px 8px rgba(121, 132, 136, 0.775);
+}
+
+.e {
+    font-family: "Space Mono", monospace;
+    font-size: 20px;
+
+    color: rgb(110, 106, 106);
+
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.mail {
+    width: 400px;
+    height: 40px;
+    font-family: "Space Mono", monospace;
+    font-size: 20px;
+
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: rgb(54, 51, 51);
+
+    margin-bottom: 10px;
+    margin-top: 5px;
+}
+.agree {
+    width: 400px;
+    height: 65px;
+    font-family: "Space Mono", monospace;
+    font-size: 22px;
+
+    border-radius: 35px;
+    border: none;
+    background-color: rgb(0, 113, 199);
+    color: white;
+
+    margin-top: 15px;
+}
+
+.icon {
+    width: 90px;
+    height: 90px;
+
+    object-fit: cover;
+    object-position: center;
+
+    border-radius: 100px;
+    vertical-align: middle;
+
+    margin-right: 10px;
+}
+
+.tots {
+    vertical-align: middle;
+    color: rgb(54, 51, 51);
+
+    font-family: "Space Mono", monospace;
+    font-size: 25px;
+
+    margin-bottom: 100px;
+}
+
+.tweet {
+    width: 90px;
+    height: 40px;
+    background-color: rgb(0, 166, 255);
+    color: white;
+
+    margin-left: 90px;
+    border-radius: 25px;
+    border: none;
+
+    font-family: "Space Mono", monospace;
+    font-size: 18px;
     font-weight: bold;
-    font-size: 30px;
 }
