--- a/Lesson 6/activitySix.css
+++ b/Lesson 6/activitySix.css
@@ -106,6 +106,12 @@ p {
 
     margin-top: 15px;
 }
+.agree:hover {
+    background-color: rgb(0, 145, 255);
+}
+.agree:active {
+    opacity: 80%;
+}
 
 .icon {
     width: 90px;
@@ -143,4 +149,10 @@ p {
     font-family: "Space Mono", monospace;
     font-size: 18px;
     font-weight: bold;
+}
+.tweet:hover {
+    background-color: rgb(0, 145, 255);
+}
+.tweet:active {
+    opacity: 80%;
 }
