--- a/Lesson 6/activitySix.css
+++ b/Lesson 6/activitySix.css
@@ -69,6 +69,7 @@ p {
     box-shadow: 0px 2px 8px rgba(121, 132, 136, 0.775);
 }
 
+/* LinkIn */
 .e {
     font-family: "Space Mono", monospace;
     font-size: 20px;
@@ -113,6 +114,7 @@ p {
     opacity: 80%;
 }
 
+/* tweet */
 .icon {
     width: 90px;
     height: 90px;
