New Activities Added

--- a/Lesson 8/activityEyt.css
+++ b/Lesson 8/activityEyt.css
@@ -211,6 +211,7 @@ p {
 
     border-radius: 50px;
     border: none;
+    outline: none;
     padding-left: 50px;
     margin: 0px;
     margin-bottom: 50px;
