--- a/Lesson 13/activityErteen.css
+++ b/Lesson 13/activityErteen.css
@@ -23,7 +23,7 @@ body {
     background-color: olive;
 }
 
-/* .blackElement {
+.blackElement {
     position: fixed;
     top: 0px;
     bottom: 0px;
@@ -31,4 +31,4 @@ body {
     left: 0px;
 
     background-color: black;
-} */
+}
